--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-Flask==3.0.3
-keras==2.15.0
-numpy==1.26.4
-opencv_python==4.10.0.82
-tensorflow
-# tensorflow_intel==2.15.0
-# Pillow==9.5.0
-Pillow==10.3.0
-tqdm==4.66.1
-python-dotenv==1.0.1
-Jinja2
-gunicorn
+Flask==2.0.1
+opencv-python-headless==4.5.3.56
+numpy==1.19.5
+keras==2.4.3
+pillow==8.2.0
+tensorflow==2.5.0
