--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,5 @@
-Flask==3.0.3
-keras==2.15.0
-numpy==1.26.4
-opencv_python==4.10.0.82
-#tensorflow
-#tensorflow_intel==2.15.0
-#Pillow==9.5.0
-Pillow==10.3.0
-tqdm==4.66.1
-python-dotenv==1.0.1
-Jinja2
-gunicorn
+Flask==2.0.3
+opencv-python-headless==4.5.5.62
+numpy==1.22.0
+tensorflow==2.7.0
+gunicorn==20.1.0
