--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Flask==2.2.2
-Werkzeug==2.2.3
-opencv-python-headless==4.5.5.62
-numpy==1.24.3
-tensorflow==2.14.0
-gunicorn==20.1.0
+Flask==3.0.3
+keras==2.15.0
+numpy==1.26.4
+opencv_python==4.10.0.82
+Pillow==10.3.0
+tqdm==4.66.1
+python-dotenv==1.0.1
+Jinja2
+gunicorn
