--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==3.0.3
-numpy==1.26.4
-opencv_python==4.10.0.82
+Flask==2.0.2
+opencv-python-headless==4.5.3.56
+numpy==1.21.0
+flask-cors==3.0.10
 gunicorn
 
